[package]
name = "rets_expression"
version = "0.1.1"
authors = ["Bryan Burgers <bryan@burgers.io>"]
edition = "2021"
license = "MIT"
description = "Implementation of RETS Validation Expressions from RESO RCP19"
readme = "README.md"
documentation = "https://docs.rs/rets_expression"
homepage = "https://github.com/zenlist/rets_expression"
repository = "https://github.com/zenlist/rets_expression"
keywords = ["rets", "validation", "expression", "reso", "rcp19"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }
miette = "7.1.0"
regex-lite = { version = "0.1.0", optional = true }
serde_json = { version = "1.0.100", default-features = false, features = ["alloc"] }
winnow = "0.6.18"

[dev-dependencies]
chrono-tz = { version = "0.8.3", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }

[features]
default = ["std"]
std = ["match_function", "chrono/clock", "chrono/serde"]
match_function = ["regex-lite"]

[[test]]
name = "compliance_tests"
harness = false
required-features = ["std"]
